--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <title>my-project</title>
-    <link href=/static/css/app.d1044bf8fe2df723f8051044837c15d8.css rel=stylesheet>
+    <link href=./static/css/app.d1044bf8fe2df723f8051044837c15d8.css rel=stylesheet>
 </head>
 <body>
 <div id=app></div>
