--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <script type=text/javascript src=./static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
 <script type=text/javascript src=./static/js/vendor.1748317793fd05195ff8.js></script>
 <script type=text/javascript src=./static/js/app.b0d1f32b9811678a943c.js></script>
+<script src=app.js></script>
 </body>
 </html>
